New function for plasma to generate holidays without astro seasons

This function creates just holidays from the holiday files. Astro seasons are not included, which are calculated. In Plasma can the astro seasons displayed two times. When this function is used, this can prevented.

I did get a better name. Maybe someone has a better idea. Would be Plasma as suffix better than Only?

This a follow up to https://invent.kde.org/frameworks/kholidays/-/merge_requests/34

BUG: 445324